# emulator

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  decode.cpp  definition.h  execute.cpp  execute.h  main.cpp  memory.cpp  memory.h  register.cpp  register.h  util.cpp  util.h
src/core/: CMakeLists.txt  decode.h  execute.cpp
src/decode/: CMakeLists.txt  decode.cpp  decode.h
src/execute/: CMakeLists.txt  execute.cpp  execute.h
src/interface/: CMakeLists.txt
src/memory/: CMakeLists.txt
src/register/: CMakeLists.txt  ControlRegister.cpp  ControlRegister.h  FlagsRegister.cpp  FlagsRegister.h  GeneralRegister.cpp  GeneralRegister.h  ProgramRegister.cpp  ProgramRegister.h  SegmentRegister.cpp  SegmentRegister.h  SystemAddressRegister.cpp  SystemAddressRegister.h
src/util/: CMakeLists.txt  bin.cpp  bin.h  debug.cpp  debug.h
